gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-serve
  labels:
    app: sample-serve
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sample-serve
