gitops/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-gateway
  labels:
    app: sample-serve
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      - kind: GRPCRoute
    options:
      gateway.networking.k8s.io/listener-protocol: "HTTP"
